Fix visibility classes to work on images.

--- a/scss/components/_visibility.scss
+++ b/scss/components/_visibility.scss
@@ -8,23 +8,23 @@
 
 table.body table.container .hide-for-large {
   display: none;
-  width:0;
-  mso-hide:all; // hide selected elements in Outlook 2007-2013
-  overflow:hidden;
-  max-height: 0px; 
+  width: 0;
+  mso-hide: all; // hide selected elements in Outlook 2007-2013
+  overflow: hidden;
+  max-height: 0;
   font-size: 0;
-  width: 0px;
-  line-height: 0; 
+  line-height: 0;
 
   @media only screen and (max-width: #{$global-breakpoint}) {
     display: block !important;
     width: auto !important;
     overflow: visible !important;
+    max-height: 100% !important;
   }
 }
 
 table.body table.container .hide-for-large * {
-  mso-hide:all; // hide selected elements in Outlook 2007-2013
+  mso-hide: all; // hide selected elements in Outlook 2007-2013
 }
 
 table.body table.container .row.hide-for-large,
@@ -38,9 +38,9 @@ table.body table.container .row.hide-for-large {
 table.body table.container .show-for-large {
   @media only screen and (max-width: #{$global-breakpoint}) {
     display: none !important;
-    width:0;
-    mso-hide:all; // hide selected elements in Outlook 2007-2013
-    overflow:hidden;
+    width: 0;
+    mso-hide: all; // hide selected elements in Outlook 2007-2013
+    overflow: hidden;
   }
 }
 
@@ -50,8 +50,7 @@ table.body table.container .show-for-large {
 //   width: 0;
 // }
 // in media query
-// img { 
-//   max-height: none !important; 
-//   width: auto !important; 
+// img {
+//   max-height: none !important;
+//   width: auto !important;
 // }
-
